fix language select font sizing and alignment

--- a/src/components/LanguageSelect/LanguageSelect.css
+++ b/src/components/LanguageSelect/LanguageSelect.css
@@ -2,7 +2,6 @@
 	border: none;
   color: #bfc4ca;
   font-family: Lato, system-ui, '.SFNSText-Regular';
-	font-size: 23px;
 	background-color: #384452;
   cursor: pointer;
   margin: 0;
